fixed symbol vertical alignment in (submit) button
git-svn-id: svn+ssh://svn.lablz.com/hosts/trunk/hosts@11494 483a4429-297d-4d5f-a489-5c5d2c303994

--- a/styles/common-template.css
+++ b/styles/common-template.css
@@ -123,7 +123,9 @@ input[type=button], input[type=submit], .button {
 }
 
 /* the awesome size gets set here. Feel Free to add new sizes, like input[type=button].small or .small.large   */
-input[type=button], input[type=submit], .button        { padding: 5px 10px 6px !important; font-size: 13px /*!important*/; }
+input[type=button], input[type=submit], .button { font-size: 15px; }
+input[type=button], input[type=submit] { padding: 6px 10px; }
+a.button { padding: 3px 10px; } /* anchor requres smaller padding than type=button */
 input[type=button]:active, input[type=submit]: active, .button:active	{ padding: 6px 10px 5px !important; }
 
 /* Touch the rest at your onw risk. */
@@ -132,8 +134,7 @@ input[type=button], input[type=submit], .button {
   cursor: pointer !important; 
   font-style: normal !important; 
   font-weight: bold !important; 
-  font: inherit !important;
-  line-height: 1 !important; 
+  line-height: 25px; /*1 !important;*/ 
   position: relative !important; 
   text-align: center !important;
   text-decoration: none !important; 
@@ -209,7 +210,7 @@ input[type=button]:active, input[type=submit]:active, .button:active	{
   }
 }
 
-.btn_with_icon { padding: 2px 0px 2px 10px !important; }
+.btn_with_icon { padding: 3px 3px 3px 10px !important; }
 .btn_with_symbol { font-size: 18px !important; padding: 2px 6px 4px 7px !important; }
 
 /*********************** end of new buttons  *****************************/
@@ -1564,8 +1565,8 @@ div .panel_block .dlg_cross, td .panel_block .dlg_cross { display: none; }
 .iphone_search input { -webkit-appearance: none; width: 100%; padding: 5px 0px 0px 0px; background-position: top center; font: bold 17px Helvetica; border: none; }
 
 /*.toolbar_icons_set { width: 25; height: 40; background-image: url(../images/skin/iphone/toolbar_icons_set.png) }*/
-.icon_btn, .icon_btn_symb { color: #eee;  cursor: pointer; font-family: arial; font-size: 23px; height: 30px; width: 30px; }
-.icon_btn_symb { -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0.8))); }
+.icon_btn, .icon_btn_symb { color: #eee;  cursor: pointer; font-family: arial; font-size: 23px; /*height: 30px; width: 30px;*/ }
+.icon_btn_symb { float: right; -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0.8))); }
 
 .right { float: right; /*margin-right: 4px;*/ }
 
